@@ -1,6 +1,7 @@
 ##########################################################################
 #  
 #  Copyright (c) 2012, John Haddon. All rights reserved.
+#  Copyright (c) 2013, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -113,7 +114,7 @@ class ScriptProcedural( IECore.ParameterisedProcedural ) :
 		if not args["node"].value :
 			return None, None
 		
-		node = self.__scriptNode.getChild( args["node"].value )
+		node = self.__scriptNode.descendant( args["node"].value )
 		
 		context = Gaffer.Context( self.__scriptNode.context() )
 		context.setFrame( args["frame"].value )
