@@ -129,7 +129,7 @@ class ScriptEditor( GafferUI.EditorWidget ) :
 			return repr( list( dragData ) )
 		elif isinstance( dragData, Gaffer.GraphComponent ) :
 			if self.scriptNode().isAncestorOf( dragData ) :
-				return "script.getChild( '" + dragData.relativeName( self.scriptNode() ) + "' )"
+				return "script['" + dragData.relativeName( self.scriptNode() ).replace( ".", "']['" ) + "']"
 		elif isinstance( dragData, Gaffer.Set ) :
 			if len( dragData ) == 1 :
 				return self.__dropText( widget, dragData[0] )
