@@ -51,7 +51,7 @@ using namespace Gaffer;
 
 static std::string repr( const Plug *plug )
 {
-	std::string result = Serialisation::modulePath( plug ) + "." + plug->typeName() + "( \"" + plug->getName() + "\", ";
+	std::string result = Serialisation::modulePath( plug ) + "." + plug->typeName() + "( \"" + plug->getName().string() + "\", ";
 	
 	if( plug->direction()!=Plug::In )
 	{
